New Feacture: * request_password_reset * reset_password
