# src/models/common.model.ts
@@ -24,8 +24,3 @@ export interface IFindOneRequest {
   id: string;
   userId: string;
 }
-
-export interface ICredentials {
-  username: string;
-  password: string;
-}
